dropping firefox support temporarily, make schedule views take up full width of page, fix drag item z-index bug
git-svn-id: svn+ssh://scheduler.csc.calpoly.edu/repo@2496 13b268f7-8392-4c9d-bc7d-1e80a86bc2f9

--- a/implementation/war/CalendarListView.css
+++ b/implementation/war/CalendarListView.css
@@ -12,7 +12,8 @@
 {
    border-spacing:0px;
    cellspacing:0px;
-   border:none;    
+   border:none;
+   width:100%;
 }
 
 #ListTable td 
