--- a/implementation/war/CalendarTableView.css
+++ b/implementation/war/CalendarTableView.css
@@ -1,20 +1,20 @@
 #CalendarTableContainer
 {
    position:absolute;
-   left:0px;
    top:100px;
-   right:0px;
    bottom:33px;
+   left:0px;
+   right:0px;
    overflow:auto;
    background-color:#FFFFFF;
-}			
+}
 
 #CalendarTable 
 {
    border-spacing:0px;
    cellspacing:0px;
    border:none;
-
+   width:100%;
 }
    
 #CalendarTable tr 
@@ -55,18 +55,19 @@
    border-right:1px solid #000000;
    white-space:nowrap;
    text-align:right;
+   width:60px;
 }
 
 #CalendarTable td#topCorner 
 {
    border-bottom:1px solid #000000;
    background-color:#edf2f2;
+   width:60px;
 }
 
 #CalendarTable td.daySpacer 
 {
    border-right:1px solid #000000;
-   border-top:none;
    padding:0px;
    margin:0px;
    width:0px;
